[package]
name = "lihee-collector"
version = "0.1.0"
authors = ["jangjunha <jangjunha113@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { version = "0.3", features = ["futures", "tokio"] }
bytes = "~1"
chrono = "0.4"
csv = "1.1"
elasticsearch = "7.12.0-alpha.1"
encoding_rs = "0.8.28"
encoding_rs_io = "0.1"
log = "0.4"
serde = "~1"
serde_json = "~1"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
kuchiki = "0.8"
regex = "~1"
lazy_static = "1.4"
itertools = "0.10.1"
